@@ -1,5 +1,6 @@
 best model BIC= class=Uniform name=Uniform dimension=1 a=-1.52961 b=2.50771
 best model Kolmogorov= class=Uniform name=Uniform dimension=1 a=-1.52961 b=2.50771
+best model AIC= class=Uniform name=Uniform dimension=1 a=-1.52961 b=2.50771
 resultBIC= class=SquareMatrix dimension=16 implementation=class=MatrixImplementation name=Unnamed rows=16 columns=16 values=[-0.506611,1416.79,1260.87,1416.79,1062.8,1133.59,935.04,1416.79,1204.29,1416.79,1416.79,722.564,1105.1,1034.26,1388.46,1020.09,1416.79,0.390135,964.655,210.864,1232.77,1148.05,1416.79,26.4376,1232.62,1416.79,865.069,1233.51,1063.77,830.598,360.998,1416.79,4.94401,3.40566,3.36873,9.04993,7.59532,36.5729,3.45423,15.9133,4.0612,2.44214,2.97694,3.35073,3.39791,7.22934,6.15453,2.7554,1416.79,3.02206,512.945,4.87206,993.28,936.458,1163.09,7.11503,781.182,1416.79,4.24283,1063.47,710.029,626.357,117.161,738.094,2.84271,5.25018,4.44992,10.9583,3.6054,4.34917,3.02071,17.9129,3.54591,2.94694,4.65243,3.81864,4.44384,8.34608,7.99529,3.72076,3.25977,4.78199,4.40705,14.8314,3.72037,4.27123,3.35483,23.6423,3.66558,3.31367,4.49168,3.98667,4.35917,11.3017,7.80417,3.76417,1.57993,1416.79,455.161,1219.03,412.435,695.404,1.96017,1416.79,285.407,1.79553,554.759,186.174,370.7,596.617,1063.69,3.59754,26.8191,20.1943,22.0736,15.3766,25.307,25.7348,25.4331,3.16515,24.2971,25.0307,21.3014,23.5995,22.1146,19.0699,15.8091,23.3449,2.98858,131.382,243.114,851.769,88.0953,342.671,2.52017,1416.79,2.95261,2.20348,102.28,186.341,356.12,596.529,1063.3,2.72506,1416.79,1416.79,1062.59,1416.79,1005.92,1190.11,736.732,1416.79,949.251,0,1416.79,1048.43,1034.26,1175.94,1331.79,1076.76,1416.79,2.88821,511.803,8.7561,992.328,935.944,1161.87,15.912,779.915,1416.79,2.01493,1063.63,710.156,629.229,119.103,737.692,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,2.81418,17.8277,6.44627,6.73739,3.04985,1419.57,1419.57,1419.57,1419.57,1419.57,1419.57,1419.57,1419.57,1419.57,1419.57,1419.57,3.44656,3.40759,147.228,6.70608,2.8749,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,3.5535,18.112,4.7839,5.19235,3.71538,1419.57,1419.57,1419.57,1419.57,1419.57,1419.57,1419.57,1419.57,1419.57,1419.57,1419.57,5.56112,4.7975,6.51924,4.0993,4.97127,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,1416.79,186.366,370.112,596.444,1063.07,2.11218]
 Kolmogorov test : case with estimated parameters
 Kolmogorov test : case with known parameters
